# osml-model-runner

./: .buildinfo  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GUIDE_FOR_MODEL_DEVELOPERS.md  METRICS_AND_DASHBOARDS.md  README.md  aggregated_results.txt  coverage_isolation_tool.py  environment-py310.yml  environment-py311.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: build.yml  docker-build.yml  docker-github.yml  docker-image.yml  docker-publish-dockerhub.yml  docker-publish-github.yml  docker-publish.yml  docker.yml  dockerhub.yml  docs.yml  documentation-publish.yml  documentation.yaml  notify-guidance-repo.yml  notify.yml  osml-model-runner-build.yml  (+8 more)
_apidoc/: aws.html  aws.osml.html  aws.osml.model_runner.api.exceptions.html  aws.osml.model_runner.api.html  aws.osml.model_runner.api.image_request.html  aws.osml.model_runner.api.inference.html  aws.osml.model_runner.api.region_request.html  aws.osml.model_runner.api.request_utils.html  aws.osml.model_runner.api.sink.html  aws.osml.model_runner.app.html  aws.osml.model_runner.app_config.html  aws.osml.model_runner.common.auto_string_enum.html  aws.osml.model_runner.common.credentials_utils.html  aws.osml.model_runner.common.endpoint_utils.html  aws.osml.model_runner.common.exceptions.html  aws.osml.model_runner.common.feature_utils.html  aws.osml.model_runner.common.html  aws.osml.model_runner.common.log_context.html  aws.osml.model_runner.common.metrics_utils.html  aws.osml.model_runner.common.mr_post_processing.html  aws.osml.model_runner.common.security_classification.html  aws.osml.model_runner.common.timer.html  aws.osml.model_runner.common.typing.html  aws.osml.model_runner.database.ddb_helper.html  aws.osml.model_runner.database.endpoint_statistics_table.html  aws.osml.model_runner.database.exceptions.html  aws.osml.model_runner.database.feature_table.html  aws.osml.model_runner.database.html  aws.osml.model_runner.database.job_table.html  aws.osml.model_runner.database.region_request_table.html  aws.osml.model_runner.exceptions.html  aws.osml.model_runner.html  aws.osml.model_runner.image_request_handler.html  aws.osml.model_runner.inference.detector.html  aws.osml.model_runner.inference.endpoint_builder.html  aws.osml.model_runner.inference.endpoint_factory.html  aws.osml.model_runner.inference.exceptions.html  aws.osml.model_runner.inference.feature_selection.html  aws.osml.model_runner.inference.feature_utils.html  aws.osml.model_runner.inference.html  (+29 more)
_modules/: index.html
_sources/: index.rst.txt
autoapi/: index.html
doc/: conf.py  index.rst
scripts/: describe_image.py  image_converter.py  requirements-scripts.txt  run_container.sh  summarize_image.py  tile_read_timer.py  update_cluster.sh
test/: __init__.py  configuration.py  test_api.py  test_app.py  test_end_to_end.py  test_integration.py  test_reqion_request_handler.py
(+437 files in other folders)
