[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
line_length = 125
known_first_party = ["aws.osml.*"]
src_paths = ["src", "test"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test"
]

[tool.autopep8]
max_line_length = 125
ignore = "E203,W503,W605"
in-place = true
recursive = true
aggressive = 3


# Note Flake8 can't currently be configured in pyproject.toml. See .flake8 for the configuration settings.
